--- a/logtools-css-productivitypack/package.json
+++ b/logtools-css-productivitypack/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "logtools-css-productivitypack",
+  "name": "LogTools",
   "author": "CannibalOx",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "tag a block with: #.v-kanban #.v-eisenhower-matrix #.v-numlist #.v-gallery",
   "main": "./index.html",
   "logseq": {
