--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "main": "./index.html",
   "logseq": {
     "id": "_DuynZ2rejh_logtools",
-    "icon": "./_DuynZ2rejh.png"
+    "icon": "icon.png"
   }
 }
